--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Wilt</string>
     <string name="btn_sign_in_text">Sign In With Spotify</string>
     <string name="btn_sign_in_attempt_text">Try Logging In Again</string>
+    <string name="logging_in_text">Logging in…</string>
 
     <string name="walkthrough1_text">Welcome to Wilt. We\'ll keep track of what you listen to.</string>
     <string name="walkthrough2_text">Once you\'ve signed up we\'ll start tracking your listens and new data will be available daily</string>
