--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="walkthrough1_text">Welcome to Wilt. We\'ll keep track of what you listen to.</string>
     <string name="walkthrough2_text">Once you\'ve signed up we\'ll start tracking your listens and new data will be available daily</string>
     <string name="login_error_text">Sorry, the Spotify login failed.</string>
+
+    <string name="retry">Retry</string>
 </resources>
