Add firebase data source for artist ranking
This is still a work in progress. It only retrieves the first page and
it also seems to stutter a bit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="login_error_text">Sorry, the Spotify login failed.</string>
 
     <string name="retry">Retry</string>
+
+    <string name="subtext_format">%1$d plays - %2$tb %2$tY</string>
 </resources>
