--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="playstext_format">%1$d plays</string>
     <string name="datetext_format">%1$tb %1$tY</string>
-    <string name="play_history_loading_message">Loading your favourite artists...</string>
+    <string name="play_history_loading_message">Loading your favourite artists…</string>
     <string name="title_profile">Profile</string>
     <string name="title_feed">Feed</string>
 </resources>
