Fix wording in description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="retry">Retry</string>
 
     <string name="info">
-        Wilt help you keep track of your favourite artists. Ever wonder what your favourite band was last autumn?
+        Wilt helps you keep track of your favourite artists. Ever wonder what your favourite band was last autumn?
         &lt;br/&gt;&lt;br/&gt;
         Unfortunately we can only start tracking from when you login but just wait a while and we\'ll have heaps
         of things to show you!&lt;br/&gt;&lt;br/&gt;
